--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -5,12 +5,17 @@
   padding: .75rem 1.2rem;
   display: inline-block;
 
-  &--orange{
+  &--orange {
     background-color: $mainOrange;
   }
 
   &--large {
-    font-size: 1.25rem;
+
     padding: 1.1rem 1.9rem;
+
+    @mixin atSmall{
+      font-size: 1.25rem;
+    }
   }
+
 }
